    method too so it can be directly used with the Repository class.
  * ``Repository.env_var`` a new property that returns the related environment
    variable name of a repo instance. This is an instance property::

    # with default settings
    repo  = Repository(...)
    repo.env_var  # should print something like "REPO131" which will be used
                  # in paths as "$REPO131"

0.2.12.1
========

* **Update:** ``Version`` class is now mixed with the ``DAGMixin``, so all the
  parent/child relation is coming from the DAGMixin.

* **Update:** ``DAGMixin.walk_hierarchy()`` is updated to walk the hierarchy in
  ``Depth First`` mode by default (method=0) instead of ``Breadth First`` mode
  (method=1).

* **Fix:** Fixed ``alembic_revision`` on database initialization.

0.2.12
======

* **Fix:** Fixed importing of ``ProjectUser`` directly from ``stalker``
  namespace.

* **Fix:** Fixed importing of ``ClientUser`` directly from ``stalker``
  namespace.

* **New:** Added two new columns to the ``BudgetEntry`` class to allow more
  detailed info to be hold.

* **New:** Added a new Mixin called ``DAGMixin`` to create parent/child
  relation between mixed in class.

* **Update:** The ``Task`` class is now mixed with the ``DAGMixin``, so all the
  parent/child relation is coming from the DAGMixin.

* **New:** Added a new class called ``Good`` to hold details about the
  commercial items/services sold in the Studio.

* **New:** Added a new class called ``PriceList`` to create price lists from
  Goods.

0.2.11
======

* **New:** User instances now have a new attribute called ``rate`` to track
  their cost as a resource.

* **New:** Added two new classes called ``Budget`` and ``BudgetEntry`` to
  record Project budgets in a simple way.

* **New:** Added a new class called **Role** to manage user roles in different
  Departments, Clients and Projects.

* **New:** User and Department relation is updated to include the role of the